--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!doctype html>
-<html lang="en">
-  <head>
+<html lang="fr">
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
+    <meta name="description" content="Découvrez les meilleurs cocktails à l'Atelier Cocktail de Christelle. Des recettes uniques, des conseils de mixologie, et plus encore pour les amateurs de cocktails.">
+    <meta name="keywords" content="cocktails, mixologie, recettes de cocktails, atelier cocktail, Christelle">
+    <meta name="author" content="Christelle">
+    <meta property="og:title" content="Les cocktails de Christelle | Atelier cocktail">
+    <meta property="og:description" content="Découvrez les meilleurs cocktails à l'Atelier Cocktail de Christelle. Des recettes uniques, des conseils de mixologie, et plus encore pour les amateurs de cocktails.">
+    <meta property="og:image" content="/logo.png">
+    <meta property="og:url" content="https://lescocktailsdechristelle.fr/">
+    <meta property="og:type" content="website">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Les cocktails de Christelle | Atelier cocktail">
+    <meta property="twitter:description" content="Découvrez les meilleurs cocktails à l'Atelier Cocktail de Christelle. Des recettes uniques, des conseils de mixologie, et plus encore pour les amateurs de cocktails.">
+    <meta property="twitter:image" content="/logo.png">
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="canonical" href="https://lescocktailsdechristelle.fr/" />
+    <title>Les cocktails de Christelle | Atelier cocktail</title>
+    <!-- Add any additional SEO-related links or scripts here -->
+</head>
+<body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-  </body>
+</body>
 </html>
