--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!doctype html>
 <html lang="fr">
+    <!--
+
+    __  __              ____    _        _____    _____   _    _ 
+    |  \/  |     /\     |___ \  | |      |_   _|  / ____| | |  | |
+    | \  / |    /  \      __) | | |        | |   | |      | |__| |
+    | |\/| |   / /\ \    |__ <  | |        | |   | |      |  __  |
+    | |  | |  / ____ \   ___) | | |____   _| |_  | |____  | |  | |
+    |_|  |_| /_/    \_\ |____/  |______| |_____|  \_____| |_|  |_|
+                                                                  
+    Ma3lich (sur discord) - Créateur du site
+    talaighiltoufik@outlook.fr pour tout contact :p
+    
+    -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
